cutoff fix

--- a/packages/spark-core/base/inputs/_selection-container.scss
+++ b/packages/spark-core/base/inputs/_selection-container.scss
@@ -1,5 +1,5 @@
 .sprk-b-SelectionContainer {
-  margin-left: $space-s;
+  margin: $space-s;
 }
 
 .sprk-b-SelectionContainer .sprk-b-Label {
@@ -9,6 +9,12 @@
 .sprk-b-SelectionContainer [type='radio'],
 .sprk-b-SelectionContainer [type='checkbox'] {
   vertical-align: middle;
+}
+
+.sprk-b-SelectionContainer [disabled][type='radio'],
+.sprk-b-SelectionContainer [disabled][type='checkbox'] {
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .sprk-b-SelectionContainer:last-child {
